--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: whitesmoke;
+}
+/* :root {
+  --header-h: 72px;  
+  --anchor-gap: 12px; 
+} */
+
+html {
+  scroll-behavior: smooth;
+  /* scroll-padding-top: calc(var(--header-h) + var(--anchor-gap)); */
+}
+
+.page-offset {
+  /* padding-top: var(--header-h); */
+}
+
+/* Add this back for extra consistency across browsers */
+section[id] {
+  /* scroll-margin-top: calc(var(--header-h) + var(--anchor-gap)); */
+}
