--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -3,13 +3,13 @@
     <div class="footer-container">
       
       <!-- Quick Links -->
-      <nav class="footer-links" aria-label="Quick links">
+      <!-- <nav class="footer-links" aria-label="Quick links">
         <a href="#home">Home</a>
         <a href="#explore">Explore</a>
         <a href="#reviews">Reviews</a>
         <a href="#enquire">Quick Quote</a>
         <a href="#contactus">Contact</a>
-      </nav>
+      </nav> -->
 
       <!-- Bottom Bar -->
       <div class="footer-bottom">
