--- a/src/app/home/testimonials/testimonials.component.html
+++ b/src/app/home/testimonials/testimonials.component.html
@@ -19,7 +19,7 @@
           <span class="muted">reviews</span>
         </div>
 
-        <a class="cta" href="#contactus">Get a quote</a>
+        <a class="cta" href="#enquire">Get a quote</a>
       </div>
     </header>
 
