Style changes for headerand home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,5 @@
 </main>
 <app-enquire></app-enquire>
 <app-contact></app-contact>
-<!-- <app-whatsapp></app-whatsapp> -->
+<app-whatsapp></app-whatsapp>
 <app-footer></app-footer>
