--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,7 +40,7 @@
         <div class="hero-grid">
           <div class="hero-copy">
             <h1 class="hero-title">
-              Set Sail in Style <br /><span class="accent">with<br />Sea Riders</span>
+              Set Sail in Style with <br /><span class="accent">Sea Riders</span>
             </h1>
 
             <p class="hero-subtitle" aria-live="polite">
