change auto slide time to 2.5 sec and refactor components and remove unused

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,5 +80,6 @@
 </section>
 
 <app-explore></app-explore>
+<app-yachtOptions></app-yachtOptions>
 <app-gallery></app-gallery>
 <app-testimonials></app-testimonials>
