--- a/src/app/yachtOptions/yachtOptions.component.html
+++ b/src/app/yachtOptions/yachtOptions.component.html
@@ -18,52 +18,67 @@
           loading="lazy"
           decoding="async"
         />
+        <div class="card__overlay yacht-media__overlay" aria-hidden="true"></div>
 
         <!-- Overlay stats bar -->
         <div class="yacht-overlay" aria-label="Yacht quick stats">
-          <div class="overlay-item">
-            <span class="overlay-text">{{ y.length }}</span>
-          </div>
+  <!-- Capacity -->
+  <div class="overlay-item">
+    <span class="overlay-icon" aria-hidden="true">
+      <!-- people icon -->
+      <svg viewBox="0 0 24 24" width="18" height="18" focusable="false" aria-hidden="true">
+        <path
+          d="M16 11c1.66 0 3-1.57 3-3.5S17.66 4 16 4s-3 1.57-3 3.5S14.34 11 16 11ZM8 11c1.66 0 3-1.57 3-3.5S9.66 4 8 4 5 5.57 5 7.5 6.34 11 8 11Zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4Zm8 0c-.32 0-.68.02-1.06.06 1.16.84 1.94 1.97 1.94 3.44v2h7v-2c0-2.66-5.33-4-8-4Z"
+          fill="currentColor"
+        />
+      </svg>
+    </span>
+    <span class="overlay-text">{{ y.capacity }} Guests</span>
+  </div>
 
-          <div class="overlay-item">
-            <span class="overlay-icon" aria-hidden="true">
-              <!-- people icon -->
-              <svg viewBox="0 0 24 24" width="18" height="18" focusable="false" aria-hidden="true">
-                <path
-                  d="M16 11c1.66 0 3-1.57 3-3.5S17.66 4 16 4s-3 1.57-3 3.5S14.34 11 16 11ZM8 11c1.66 0 3-1.57 3-3.5S9.66 4 8 4 5 5.57 5 7.5 6.34 11 8 11Zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4Zm8 0c-.32 0-.68.02-1.06.06 1.16.84 1.94 1.97 1.94 3.44v2h7v-2c0-2.66-5.33-4-8-4Z"
-                  fill="currentColor"
-                />
-              </svg>
-            </span>
-            <span class="overlay-text">{{ y.capacity }} People</span>
-          </div>
+  <!-- Cruise time if present, else show length -->
+  <div class="overlay-item">
+    <span class="overlay-icon" aria-hidden="true">
+      <!-- clock icon -->
+      <svg viewBox="0 0 24 24" width="18" height="18" focusable="false" aria-hidden="true">
+        <path
+          d="M12 1.75A10.25 10.25 0 1 0 22.25 12 10.26 10.26 0 0 0 12 1.75Zm0 18.5A8.25 8.25 0 1 1 20.25 12 8.26 8.26 0 0 1 12 20.25Zm.75-13h-1.5v5.1l4.2 2.52.75-1.23-3.45-2.07Z"
+          fill="currentColor"
+        />
+      </svg>
+    </span>
+    <span class="overlay-text">{{ y.totalTime }}</span>
+  </div>
 
-          <div class="overlay-item" *ngIf="y.speed">
-            <span class="overlay-icon" aria-hidden="true">
-              <!-- wrench/gear icon -->
-              <svg viewBox="0 0 24 24" width="18" height="18" focusable="false" aria-hidden="true">
-                <path
-                  d="M19.14 12.94c.04-.31.06-.63.06-.94s-.02-.63-.06-.94l2.03-1.58a.5.5 0 0 0 .12-.64l-1.92-3.32a.5.5 0 0 0-.6-.22l-2.39.96a7.3 7.3 0 0 0-1.63-.94l-.36-2.54A.5.5 0 0 0 13.9 1h-3.8a.5.5 0 0 0-.49.42l-.36 2.54c-.58.23-1.12.53-1.63.94l-2.39-.96a.5.5 0 0 0-.6.22L2.7 7.48a.5.5 0 0 0 .12.64l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94L2.82 14.5a.5.5 0 0 0-.12.64l1.92 3.32c.13.22.39.3.6.22l2.39-.96c.51.41 1.05.71 1.63.94l.36 2.54c.04.24.25.42.49.42h3.8c.24 0 .45-.18.49-.42l.36-2.54c.58-.23 1.12-.53 1.63-.94l2.39.96c.22.08.47 0 .6-.22l1.92-3.32a.5.5 0 0 0-.12-.64l-2.03-1.56ZM12 15.5A3.5 3.5 0 1 1 12 8a3.5 3.5 0 0 1 0 7.5Z"
-                  fill="currentColor"
-                />
-              </svg>
-            </span>
-            <span class="overlay-text">{{ y.rateType }}</span>
-          </div>
+  <!-- <ng-template #showLength> -->
+    <div class="overlay-item">
+      <span class="overlay-icon" aria-hidden="true">
+        <!-- ruler icon (you already have one below) -->
+        <svg viewBox="0 0 24 24" width="18" height="18" focusable="false" aria-hidden="true">
+          <path
+            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM20.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83Z"
+            fill="currentColor"
+          />
+        </svg>
+      </span>
+      <span class="overlay-text">{{ y.length }}</span>
+    </div>
+  <!-- </ng-template> -->
 
-          <div class="overlay-item">
-            <span class="overlay-icon" aria-hidden="true">
-              <!-- ruler icon -->
-              <svg viewBox="0 0 24 24" width="18" height="18" focusable="false" aria-hidden="true">
-                <path
-                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25ZM20.71 7.04a1 1 0 0 0 0-1.41l-2.34-2.34a1 1 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83Z"
-                  fill="currentColor"
-                />
-              </svg>
-            </span>
-            <span class="overlay-text">{{ y.length }}</span>
-          </div>
-        </div>
+  <!-- Price -->
+  <div class="overlay-item">
+    <span class="overlay-icon" aria-hidden="true">
+      <!-- tag icon -->
+      <svg viewBox="0 0 24 24" width="18" height="18" focusable="false" aria-hidden="true">
+        <path
+          d="M20.59 13.41 12 22l-8.59-8.59A2 2 0 0 1 2.83 12V4a2 2 0 0 1 2-2h8a2 2 0 0 1 1.41.59l6.35 6.35a2 2 0 0 1 0 2.83ZM7.5 7A1.5 1.5 0 1 0 9 8.5 1.5 1.5 0 0 0 7.5 7Z"
+          fill="currentColor"
+        />
+      </svg>
+    </span>
+    <span class="overlay-text">{{ y.rate }}</span>
+  </div>
+</div>
       </div>
 
       <div class="yacht-body">
